...
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/item_list_participants"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/autocomplete_participant"
        app:layout_constraintBottom_toTopOf="@+id/btn_form_save"
        tools:context=".ui.meeting_form.FormMeetingActivity"
        tools:listitem="@layout/list_participant" />

    <Button
        android:id="@+id/btn_back_participant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/ic_chevron_left_black"
        android:text="@string/btn_back"
        style="?android:attr/borderlessButtonStyle"
...
